# gencom-nft

./: LICENSE.md  README.md
contracts/creative_nft/: Cargo.toml  README.md  lib.rs
fe/: README.md  package-lock.json  package.json
fe/public/: index.html
fe/src/: App.css  App.js  Integration.js  constants.js  index.css  index.js  metadata.js
fe/src/components/: About.jsx  AllCanvas.jsx  Broken.jsx  BuilderCard.jsx  CanvasBox.jsx  CanvasForm.jsx  CanvasGrid.jsx  CanvasRoom.jsx  CaptureMultipleCells.jsx  CardList.jsx  ChooseAccount.jsx  CreateRoom.jsx  DisplayCard.jsx  Error.jsx  Error404.jsx  FeaturedRoomCard.jsx  Footer.jsx  GridSVG.jsx  HomePage.jsx  Loading.jsx  Navbar.jsx  OwnershipGrid.jsx  Profile.jsx  RoomFeed.jsx  SnackbarCloseButton.jsx  TrendingRooms.jsx  VideoTutorial.jsx  temp.jsx
fe/src/components/discarded/: NewRoomFeed.jsx  OwnershipGrid.jsx  RoomExpired.jsx  TrendingRooms.jsx
